--- a/workout-time/index.html
+++ b/workout-time/index.html
@@ -3329,6 +3329,17 @@
                                     <span class="theme-toggle__icon">🌞</span>
                                     <span class="theme-toggle__label">Light Mode</span>
                                 </button>
+                                <button
+                                    type="button"
+                                    id="audioTriggersToggle"
+                                    class="theme-toggle-btn"
+                                    aria-pressed="false"
+                                    title="Enable motivational & load-based audio cues"
+                                    style="margin-left:8px;"
+                                >
+                                    <span class="theme-toggle__icon">🔊</span>
+                                    <span class="theme-toggle__label">Audio Cues</span>
+                                </button>
                             </div>
                             <div class="plan-section-header__start">
                                 <button id="startPlanBtn" class="button-pulse" onclick="app.startPlan()">Start Plan</button>
