--- a/workout-time/index.html
+++ b/workout-time/index.html
@@ -1187,6 +1187,14 @@
                 background: rgba(143, 162, 255, 0.12);
             }
 
+            /* Persistent active state for audio toggle */
+            .theme-toggle-btn.is-active {
+                border-color: var(--accent-color);
+                color: var(--accent-color);
+                background: rgba(143, 162, 255, 0.12);
+                box-shadow: 0 6px 20px rgba(102, 126, 234, 0.22);
+            }
+
             .unit-toggle-button {
                 display: flex;
                 align-items: center;
