--- a/workout-time/index.html
+++ b/workout-time/index.html
@@ -4061,6 +4061,7 @@
         <script src="device.js"></script>
         <script src="chart.js"></script>
         <script src="dropbox.js"></script>
+        <script src="grouping-logic.js"></script>
         <script src="plan-runner.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
         <script src="app.js"></script>
